# docgraph

./: .gitignore  .travis.yml  ChangeLog.md  Makefile  README.md  docgraph.cabal  envfile  stack.yaml
app/: Main.hs
sql/: data.sql  functions.sql  schema.sql
src/: DocGraph.hs
src/DocGraph/: Bootstrap.hs  Database.hs  Document.hs  Login.hs  Pages.hs  Project.hs  User.hs
