name:           docgraph
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/rheosystems/docgraph#readme>
homepage:       https://github.com/rheosystems/docgraph#readme
bug-reports:    https://github.com/rheosystems/docgraph/issues
author:         Mikkel Christiansen
maintainer:     mikkel@rheosystems.com
copyright:      Rheo Systems (Pty) Ltd
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/rheosystems/docgraph

library
  hs-source-dirs:     src
  default-extensions: OverloadedStrings
  build-depends:      aeson
                    , base >=4.7 && <5
                    , blaze-html
                    , servant
                    , servant-blaze
                    , servant-server
                    , http-api-data
                    , text
                    , warp
  exposed-modules:
                    DocGraph
  other-modules:
                    DocGraph.Pages
  default-language: Haskell2010

executable docgraph-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , docgraph
  other-modules:
      Paths_docgraph
  default-language: Haskell2010

test-suite docgraph-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , docgraph
  other-modules:
      Paths_docgraph
  default-language: Haskell2010
